// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render margin 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  margin: calc(4px * 5);
  margin: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginBottom 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 5);
  margin-bottom: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginLeft 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  margin-left: calc(4px * 5);
  margin-left: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginRight 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  margin-right: calc(4px * 5);
  margin-right: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginTop 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-top: calc(4px * 5);
  margin-top: calc(var(--wp-g2-grid-base) * 5);
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginX 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  margin-left: calc(4px * 5);
  margin-left: calc(var(--wp-g2-grid-base) * 5);
  margin-right: calc(4px * 5);
  margin-right: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginY 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  margin-bottom: calc(4px * 5);
  margin-bottom: calc(var(--wp-g2-grid-base) * 5);
  margin-top: calc(4px * 5);
  margin-top: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render padding 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding: calc(4px * 5);
  padding: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingBottom 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding-bottom: calc(4px * 5);
  padding-bottom: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingLeft 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding-left: calc(4px * 5);
  padding-left: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingRight 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding-right: calc(4px * 5);
  padding-right: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingTop 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding-top: calc(4px * 5);
  padding-top: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingX 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding-left: calc(4px * 5);
  padding-left: calc(var(--wp-g2-grid-base) * 5);
  padding-right: calc(4px * 5);
  padding-right: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingY 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-bottom: calc(4px * 2);
  margin-bottom: calc(var(--wp-g2-grid-base) * 2);
  padding-bottom: calc(4px * 5);
  padding-bottom: calc(var(--wp-g2-grid-base) * 5);
  padding-top: calc(4px * 5);
  padding-top: calc(var(--wp-g2-grid-base) * 5);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-spacer wp-components-spacer emotion-0"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;
